--- a/WebContent/levelup/index.html
+++ b/WebContent/levelup/index.html
@@ -1,10 +1,5 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8"
-	pageEncoding="UTF-8"%>
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core"%>
-<%@ taglib prefix="fmt" uri="http://java.sun.com/jsp/jstl/fmt"%>
 <!DOCTYPE html>
 <html>
-
 <head>
 <meta charset="utf-8">
 <meta name="viewport"
@@ -41,7 +36,7 @@
 				style="margin-right: 20px;">
 				<li class="layui-nav-item"><a href="javascript:;"> <i
 						class="layui-icon">&#xe63f;</i> 皮肤
-				</a> </a>
+				</a>
 					<dl class="layui-nav-child skin">
 						<dd>
 							<a href="javascript:;" data-skin="default"
@@ -91,18 +86,18 @@
 				<ul class="layui-nav layui-nav-tree" lay-filter="kitNavbar"
 					kit-navbar>
 					<li class="layui-nav-item layui-nav-itemed"><a class=""
-						href="javascript:;"><i class="fa fa-plug" aria-hidden="true"></i><span>
+						href="javascript:;"><i class="layui-icon" >&#xe615;</i><span>
 								资源查询</span></a>
 						<dl class="layui-nav-child">
 							<dd>
 								<a href="javascript:;"
-									data-url="${pageContext.request.contextPath}/toBasicSearch"
-									kit-target data-title="按年份查询"><i class="layui-icon">&#xe6c6;</i><span>&nbsp;按年份查询</span>
-								</a>
+									data-url="views/search/basicSearchByYear.jsp"
+									kit-target data-title="按年份查询" data-id='1'><i
+									class="layui-icon">&#xe6c6;</i><span>&nbsp;按年份查询</span> </a>
 							</dd>
 							<dd>
 								<a href="javascript:;"
-									data-url="${pageContext.request.contextPath}/toBasicSearch"
+									data-url="views/search/basicSearchByName.jsp"
 									kit-target data-title="按名称查询" data-id='2'><i
 									class="layui-icon">&#xe658;</i><span>&nbsp;按名称查询</span></a>
 							</dd>
@@ -168,16 +163,37 @@
 		</div>
 		<div class="layui-body" id="container">
 			<!-- 内容主体区域 -->
-			<div style="padding: 15px;">
+			<!-- <div style="padding: 15px;">
 				<i class="layui-icon layui-anim layui-anim-rotate layui-anim-loop">&#xe63e;</i>
 				请稍等...
-			</div>
+			</div> -->
+
+			<!-- <div class="layui-tab layui-tab-card kit-tab"
+				lay-filter=" + that._filter + ">
+				<ul class="layui-tab-title">
+				</ul>
+				<div class="kit-tab-tool">
+					操作&nbsp;<i class="fa fa-caret-down"></i>
+				</div>
+				<div class="kit-tab-tool-body layui-anim layui-anim-upbit">
+					<ul>
+						<li class="kit-item" data-target="refresh">刷新当前选项卡</li>
+						<li class="kit-line"></li>
+						<li class="kit-item" data-target="closeCurrent">关闭当前选项卡</li>
+						<li class="kit-item" data-target="closeOther">关闭其他选项卡</li>
+						<li class="kit-line"></li>
+						<li class="kit-item" data-target="closeAll">关闭所有选项卡</li>
+					</ul>
+				</div>
+				<div class="layui-tab-content">
+				</div>
+			</div>  -->
+
 		</div>
 
 		<div class="layui-footer">
 			<!-- 底部固定区域 -->
-			2017 &copy; <a href="http://kit.zhengjinfan.cn/">kit.zhengjinfan.cn/</a>
-			MIT license
+			2017 &copy;
 		</div>
 	</div>
 	<!-- 	<script type="text/javascript">
